Fix: Prevent agency index nav tabs from truncating

--- a/app/assets/stylesheets/admin/design/_fr_index.scss
+++ b/app/assets/stylesheets/admin/design/_fr_index.scss
@@ -23,7 +23,7 @@
   overflow: hidden;
   padding: 0;
   padding-bottom: 8px;
-  width: 617px;
+  width: 619px;
 
     &.page_summary {
       margin-bottom: 20px;
